style: adjust tbody font color and justify-content

--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -19,6 +19,7 @@
     border: none;
     background: var(--header);
     color: var(--foreground-header);
+    justify-content: space-between;
 }
 
 .modal-header i{
@@ -220,10 +221,14 @@ hr {
     border-top: 0;
     border-bottom: 1px solid var(--background);
 }
+.table tbody tr td {
+    color: var(--foreground-game);
+}
 .table thead {
     background-color: var(--game);
     border-radius: 10px 10px 0 0;
     overflow: hidden;
+    
 }
 .modal-footer {
     justify-content: center;
