--- a/src/app/clientes/personal-data/document/document.component.html
+++ b/src/app/clientes/personal-data/document/document.component.html
@@ -31,19 +31,19 @@
             <span>{{ customer?.cpf }}</span>
         </div>
         <div class="field">
-            <label>Nome</label>
+            <label>{{'geral.nome' | translate }}</label>
             <span>{{ customer?.nome }} {{ customer?.sobrenome }}</span>
         </div>
         <div class="field">
-            <label>Data de nascimento</label>
+            <label>{{ 'geral.dataDeNascimento' | translate }}</label>
             <span>{{ customer?.data_nascimento }}</span>
         </div>
         <div class="field">
-            <label>Nacionalidade</label>
+            <label>{{ 'geral.nacionalidade' | translate }}</label>
             <span>{{ customer?.nationality }}</span>
         </div>
         <div class="field">
-            <label>Gênero</label>
+            <label>{{ 'geral.genero' | translate }}</label>
             <span>{{ customer?.genero }}</span>
         </div>
     </div>
