--- a/src/app/shared/layout/modals/cartao-cadastro-modal/cartao-cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cartao-cadastro-modal/cartao-cadastro-modal.component.html
@@ -20,7 +20,7 @@
                 <app-error-msg [control]="form.get('apostador')"></app-error-msg>
             </div>
             <div class="form-group">
-                <input type="text" mask="dot_separator.2" class="form-control inverted-out" formControlName="valor"
+                <input type="text" [currencyMask]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }" class="form-control inverted-out" formControlName="valor"
                     placeholder="Valor" [ngClass]="applyCssInputError('valor')">
                 <app-error-msg [control]="form.get('valor')"></app-error-msg>
             </div>
