Feat: Adjust logic menu and button promotion

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -140,7 +140,7 @@
                 </div>
                 <div id="xtremepushNotificationContainer"></div>
             </div>
-            <div class="btn-promocao" *ngIf="!paginaPromocaoHabilitado && promotionActive">
+            <div class="btn-promocao" *ngIf="iconePromocaoHabilitado && promotionActive">
                 <a [routerLink]="['/promocao']" style="font-size: 0px; line-height: 0;" routerLinkActive="active">
                     <div class="btn-promocao">
                         <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
