--- a/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/layout/modals/confirm-modal/confirm-modal.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="actions">
             <button type="button" class="btn btn-custom2" (click)="activeModal.dismiss('')" data-dismiss="modal">Não</button>
-            <button type="button" class="btn btn-custom" (click)="activeModal.close('')" [disabled]="!faceMatchActive">Sim</button>
+            <button type="button" class="btn btn-custom" (click)="activeModal.close('')" [disabled]="yesButtonIsDisabled">Sim</button>
         </div>
     </div>
 </div>
