--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -44,10 +44,12 @@
                 </p>
             </ng-template>
         </ng-container>
-        <p *ngIf="aposta?.data_liquidacao">
-            <b>{{'geral.liquidadoEm' | translate}}</b>
-            <span> {{aposta.data_liquidacao | moment: 'DD/MM/YYYY [às] HH:mm'}}</span>
-        </p>
+        <ng-container *ngIf="aposta?.data_liquidacao">
+            <p>
+                <b>{{'geral.liquidadoEm' | translate}}</b>
+                <span> {{aposta.data_liquidacao | moment: 'DD/MM/YYYY [às] HH:mm'}}</span>
+            </p>
+        </ng-container>
         <p>Em {{aposta.horario | moment: 'DD/MM/YYYY [às] HH:mm'}}</p>
     </div>
 </div>
