--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.css
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.css
@@ -54,7 +54,9 @@
     border-bottom: 1px solid var(--game);
 }
 
-.table td.no-border{
+.table td.no-border i{
+    background-color: transparent;
+    color: var(--highlight);
     border-left: 0 !important;
 }
 
