Revert "fix: correction to the background color of the loading animation"
This reverts commit 4f5b6afbe36df3f2492c483ce68f61d820d1cf8a.

--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.css
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.css
@@ -54,9 +54,7 @@
     border-bottom: 1px solid var(--game);
 }
 
-.table td.no-border i{
-    background-color: transparent;
-    color: var(--highlight);
+.table td.no-border{
     border-left: 0 !important;
 }
 
