fix: remove ngclass green color

--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
@@ -10,10 +10,10 @@
                     <p style="margin: 0" class="campeonato">
                         {{item.odd.desafio.categoria.nome}}
                     </p>
-                    <p class="nome" [ngClass]="resultadoClass(item)">
+                    <p class="nome">
                         {{item.odd.desafio.nome}}
                     </p>
-                    <p class="cotacao" [ngClass]="resultadoClass(item)">
+                    <p class="cotacao">
                         Resposta:
                         {{item.odd_nome}}
                         ({{item.cotacao}})
