--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
@@ -54,6 +54,14 @@
     margin-bottom: 0;
     color: var(--foreground-game);
 }
+.teams-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-height: 2em;
+    margin-left: 18px;
+}
 .ganhou{
     color: #0C9F19;
     text-transform: uppercase;
@@ -249,6 +257,10 @@ table tr td:nth-child(3) {
     display: none;
 }
  @media only screen and (max-width: 532px) {
+    .teams-container {
+        margin-left: 0px;
+        width: auto;
+    }
     .modal-body {
         max-height: 55vh;
     }
@@ -305,6 +317,15 @@ table tr td:nth-child(3) {
 @media only screen and (min-width: 532px) and (max-width: 1024px) {
     .modal-body {
         max-height: 55vh;
+    }
+    #teams-names, #game-status {
+        display: flex;
+        flex: 1;
+    }
+    #game-status {
+        display: flex;
+        justify-content: end;
+        margin-right: 18px;
     }
     .odd-container {
         display: flex;
