--- a/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.css
+++ b/src/app/shared/layout/modals/bet-sharing-modal/bet-sharing-modal.component.css
@@ -75,6 +75,17 @@ img{
     max-height: 90px;
     max-width: 150px;
 }
+.teams-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-height: 2em;
+    margin-left: 18px;
+}
+#td-result {
+    vertical-align: middle;
+}
 .ganhou{
     color: #0C9F19;
     text-transform: uppercase;
@@ -183,6 +194,13 @@ hr {
     display: none;
 }
  @media only screen and (max-width: 532px) {
+    .teams-container {
+        margin-left: 0;
+        width: auto;
+    }
+    #game-status {
+        margin-right: 0px;
+    }
     .cupom-header {
         max-height: none;
         column-count: 1;
@@ -203,6 +221,16 @@ hr {
     }
  }
  @media only screen and (max-width: 1024px) {
+     #teams-names, #game-status {
+         display: flex;
+         flex: 1;
+     }
+     #game-status {
+         text-align: right;
+         margin-left: auto;
+         width: 100%;
+         margin-right: 18px;
+     }
     .jogo-resultado {
         margin: 0 !important;
         padding: 0 !important;
