fix: adjust style odd name in ticket

--- a/src/app/shared/layout/exibir-bilhete/superodd/exibir-bilhete-superodd.component.html
+++ b/src/app/shared/layout/exibir-bilhete/superodd/exibir-bilhete-superodd.component.html
@@ -7,10 +7,10 @@
                     <p style="margin: 0">{{aposta.horario | moment: 'HH:mm'}}</p>
                 </div>
                 <div class="item">
-                    <p class="nome" class="{{aposta.resultado}}">
+                    <p class="nome">
                         {{aposta.item.name}}
                     </p>
-                    <p class="cotacao" class="{{aposta.resultado}}">
+                    <p class="cotacao">
                         ({{aposta.item.value}})
                     </p>
                 </div>
