--- a/src/app/shared/layout/modals/register-v3-modal/parts/alert-validation-steps/alert-validation-steps.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/parts/alert-validation-steps/alert-validation-steps.component.html
@@ -1,6 +1,6 @@
 <div class="alert-validation-steps" *ngIf="hasStepValidation">
     <div class="alert-validation-steps__body">
-        <icon-circle-info color="var(--foreground-inputs-odds)" [size]="12" />
-        <span>{{alertValidationText}}</span>
+        <icon-circle-info color="var(--foreground-inputs-odds)" [size]="12"/>
+        {{alertValidationText}}
     </div>
 </div>
