--- a/src/styles.css
+++ b/src/styles.css
@@ -1638,6 +1638,10 @@ input[type=number]::-webkit-outer-spin-button {
     max-width: 400px;
 }
 
+.modal-460 .modal-dialog {
+    max-width: 460px;
+}
+
 .modal-600 .modal-dialog {
     max-width: 600px;
 }
