--- a/src/app/shared/layout/modals/register-v3-modal/parts/alert-validation-steps/alert-validation-steps.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/parts/alert-validation-steps/alert-validation-steps.component.scss
@@ -1,13 +1,11 @@
 .alert-validation-steps {
     background-color: #0D6EFD26;
+    color: #DDEBFF;
     border-radius: 4px;
     border: 0.5px solid #0D6EFD80;
-
-    &__body {
-        display: flex;
-        flex-direction: row;
-        gap: 8px;
-        padding: 10px 8px;
-        justify-content: center;
-    }
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    padding: 10px 8px;
+    justify-content: center;
 }
