--- a/src/app/shared/layout/modals/validation/generic-information-steps/generic-information-steps.component.scss
+++ b/src/app/shared/layout/modals/validation/generic-information-steps/generic-information-steps.component.scss
@@ -1,58 +1,82 @@
-.generic-information-steps{
+.generic-information-steps {
+    min-height: 358px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    aspect-ratio: 1/1;
     flex-direction: column;
     background-color: var(--header);
-    gap:14px
-}
+    gap: 67px;
 
-.body {
-    display: flex;
-    width: 353px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-}
+    &__body {
+        display: flex;
+        width: 353px;
+        flex-direction: column;
+        justify-content: center;
+        gap: 32px;
+    }
 
-.generic-information-steps__body {
-    display: flex;
-    align-items: flex-start;
-    gap: 12px;
-    align-self: stretch;
-    color: rgba(255, 255, 255, 0.70);
-    font-family: "Open Sans";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
+    &__item {
+        display: flex;
+        align-items: flex-start;
+        gap: 12px;
+        align-self: stretch;
+        color: rgba(255, 255, 255, 0.70);
+        font-family: "Open Sans";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 
-.generic-information-steps__title{
-    color: #FFF;
-    font-family: "Open Sans";
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 24px */
-}
+    &__item-icon {
+        width: 36px;
+        height: 36px;
+        display: flex;
+        align-items: center;
+        border-radius: 4px;
+        border: 4px solid rgba(var(--highlight-rgb), 0.05);
+        background: rgba(var(--highlight-rgb) 0.10);
+    }
 
-.generic-information-steps-body__icon {
-    width: 36px;
-    height: 36px;
-}
+    &__title {
+        color: #FFF;
+        font-family: "Open Sans";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 120%;
+        text-align: start;
+    }
 
-.btnClose {
-    font-size: 32px;
-    line-height: 32px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: var(--highlight);
-    cursor: pointer;
-    background-color: var(--header);
-    border: none
+    &__footer {
+        padding-bottom: 24px;
+    }
+
+    &__btn-to-cancel {
+        font-size: 32px;
+        line-height: 32px;
+        position: absolute;
+        top: 21px;
+        right: 24px;
+        color: var(--highlight);
+        cursor: pointer;
+        background-color: var(--header);
+        border: none;
+    }
+
+    &__action-buton {
+        background-color: var(--header);
+        border: 1px solid var(--highlight);
+        color: var(--highlight);
+        border-radius: 4px;
+        display: flex;
+        width: 353px;
+        height: 40px;
+        padding: 8px;
+        justify-content: center;
+        align-items: center;
+        gap: 4px;
+        flex-shrink: 0;
+    }
 }
