Fix: code review requests

--- a/src/app/shared/layout/modals/register-v3-modal/parts/alert-verification-steps/alert-verification-steps.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/parts/alert-verification-steps/alert-verification-steps.component.html
@@ -1,4 +1,4 @@
-<div class="alert-validation-steps" *ngIf="hasStepVerificationRequired">
+<div class="alert-verification-steps" *ngIf="hasStepVerificationRequired">
     <icon-circle-info color="#DDEBFF" [size]="12"/>
     {{ alertVerificationText }}
 </div>
