--- a/src/app/shared/layout/modals/register-v3-modal/parts/alert-verification-steps/alert-verification-steps.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/parts/alert-verification-steps/alert-verification-steps.component.scss
@@ -1,4 +1,4 @@
-.alert-validation-steps {
+.alert-verification-steps {
     background-color: #0D6EFD26;
     color: #DDEBFF;
     border-radius: 4px;
