Fix: variable name

--- a/src/app/shared/layout/modals/information-steps/information-steps.component.html
+++ b/src/app/shared/layout/modals/information-steps/information-steps.component.html
@@ -13,7 +13,7 @@
             <div class="information-steps__item-icon">
                 <ng-container *ngComponentOutlet="information.icon; inputs: information.iconProps"></ng-container>
             </div>
-            <span class="information-steps-item__text"> {{ information.text }}</span>
+            <span class="information-steps-item__text"> {{ information.description }}</span>
         </div>
     </div>
     <div class="information-steps__footer">
